--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ body{
   font-family: Arial, sans-serif;
 }
 
+h1,h2,h3,h4,h5,p{
+  text-align:center;
+}
+
 .card-collection {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
