--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,22 @@
-body{
-  font-family: Arial, sans-serif;
+body {
+    font-family: Arial, sans-serif;
 }
 
-h1,h2,h3,h4,h5,p{
-  text-align:center;
+h1, h2, h3, h4, h5, p {
+    text-align: center;
 }
 
 .card-collection {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .standout {
-  box-shadow: rgba(0,0,0,0.16) 0 1px 4px, rgb(51,51,51) 0 0 0 3px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px, rgb(51, 51, 51) 0 0 0 3px;
+}
+
+@media only screen and (max-width: 600px) {
+    .card-collection {
+        grid-template-columns: 1fr;
+    }
 }
